# HPRS_AGV_Navigation

./: .gitattributes  .gitignore  README.md
VTPRL/: README.md  requirements_llm.txt
VTPRL/Docker/: Commands  Dockerfile  Dockerfile_NoCUDA  Dockerfile_Python310  Dockerfile_Python38  Dockerfile_ROS  requirements_Python310.txt  requirements_Python38.txt  startup.sh
VTPRL/agent/: config.py  config_advanced.py  env_sim_run.py  evaluate_agent.py  evaluate_test_cases.py  main.py  main_advanced.py  simulator_vec_env.py  train_warehouse_hprs.py
VTPRL/agent/config/: evaluate_agent.yaml  evaluate_compare_models.yaml  expert_collection.yaml  offline_td3_bc.yaml  online_td3.yaml  online_td3_baseline.yaml  online_td3_llm.yaml  td3_bc.yaml
VTPRL/agent/envs/: get_env.py  warehouse_unity_env.py
VTPRL/agent/expert/: expert_dataset.py  run_expert.py
VTPRL/agent/logs/: compare_checkpoints.csv
VTPRL/agent/td3/: td3_agent.py
VTPRL/agent/tools/: compare_models_with_hprs.py  compare_offline_checkpoints.py  llm_apply_patch.py  llm_propose_patch.py  llm_summarize_run.py  run_llm_pipeline.py  run_online_baseline_and_llm.py  run_online_llm_loop.py
VTPRL/agent/utils/: astar_planner.py  (+7 more)
VTPRL/auto-shaping/: pyproject.toml  requirements.txt
VTPRL/auto-shaping/auto_shaping/: hprs_vec_wrapper.py
VTPRL/auto-shaping/auto_shaping/utils/: hprs_tb_callback.py
VTPRL/auto-shaping/configs/: warehouse.yaml
VTPRL/auto-shaping/training/: video_recorder_cb.py
VTPRL/docs/: Configuration-Parameters.md  Methodology_CN.md  Methodology_EN.md
VTPRL/testcases/: warehouse_test_cases.yaml
(+122 files in other folders)
